[package]
edition = "2018"
readme = "README.md"
name = "blue_hal"
version = "0.1.0"

# The features below reflect the hierarchy of stm32 families.
# Choosing a f4 family implies f4, which implies stm32, which
# implies cortex M...

[features]
default = [
   "wgm160p",
   "defmt-default",
]
stm32f412_discovery = ["stm32f412"]
stm32f429 = ["stm32f4/stm32f429", "stm32f4_any"]
stm32f469 = ["stm32f4/stm32f469", "stm32f4_any"]
stm32f407 = ["stm32f4/stm32f407", "stm32f4_any"]
stm32f412 = ["stm32f4/stm32f412", "stm32f4_any"]
stm32f4_any = ["stm32_any"]
stm32_any = ["cortex_m_any"]
cortex_m_any = []
wgm160p = ["efm32gg11b_any"]
efm32gg11b_any = ["efm32gg11b", "cortex_m_any"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
nb = "1.0.0"
paste = "1.0.4"
static_assertions = "1.1.0"
defmt = "0.2"
defmt-rtt = "0.2"
marker-blanket = "0.1"
bytemuck = "1.5.1"

[dependencies.nom]
version = "6.0.1"
default-features = false

[dependencies.ufmt]
version = "0.1.0"
default-features = false

[dependencies.crc]
version = "1.8.1"
default-features = false

[dependencies.stm32f4]
optional = true
version = "0.12.1"
features = ["rt"]

[dependencies.efm32gg11b]
optional = true
git = "https://github.com/pablo-mansanet-bluefruit/efm32gg11b-hal.git"
features = ["rt"]

[lib]
name = "blue_hal"
test = true
bench = false

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
opt-level = 1 # Some optimization not to tank the binary size
codegen-units = 1 # better optimizations
lto = true # better optimizations
